# PCMPlay

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bj/gxz/pcmplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  Audio.cpp  Audio.h  AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  native-lib.cpp
app/src/main/java/com/bj/gxz/pcmplay/: AudioRecorder.java  AudioTrackPlayer.java  MainActivity.java  OpenSlEsPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bj/gxz/pcmplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
